@@ -6,11 +6,11 @@ import ru.pel.usbddc.entity.USBDevice;
 import ru.pel.usbddc.entity.UserProfile;
 
 import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Path;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.regex.PatternSyntaxException;
 import java.util.stream.Collectors;
 
 /**
@@ -19,7 +19,12 @@ import java.util.stream.Collectors;
 public class RegistryAnalyzer implements Analyzer {
     private static final String REG_KEY_USB = "HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Enum\\USB";
     private static final String REG_KEY_MOUNTED_DEVICES = "HKEY_LOCAL_MACHINE\\SYSTEM\\MountedDevices";
-    private static final String REG_PROFILE_LIST = "HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Windows NT\\CurrentVersion\\ProfileList";
+    private static final String REG_KEY_PROFILE_LIST = "HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Windows NT\\CurrentVersion\\ProfileList";
+    private static final String REG_KEY_USBSTOR = "HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Enum\\USBSTOR";
+    /**
+     * Ветка службы ReadyBoost
+     */
+    private static final String REG_KEY_EMDMGMT = "HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Windows NT\\CurrentVersion\\EMDMgmt";
     private static final Logger LOGGER = LoggerFactory.getLogger(RegistryAnalyzer.class);
     private final Map<String, USBDevice> usbDeviceMap;
 
@@ -42,14 +47,18 @@ public class RegistryAnalyzer implements Analyzer {
 
         for (Map.Entry<String, String> entry : mountedDevices.entrySet()) {
             String encodedValue = entry.getValue();
+            if (isHDDPartition(encodedValue)) {
+                LOGGER.info("[i] Устройство определено как раздел несъемного HDD/SSD. \n\t\tПропущено: {} :: {}.",
+                        entry.getKey(), encodedValue);
+                continue;
+            }
             String decodedValue = decodeHexToString(encodedValue);
-
-            String serial = Arrays.stream(decodedValue.split("#"))
-                    .skip(2)
-                    .map(s -> s.charAt(s.length() - 2) == '&' ? // если на предпоследней позиции символ "&", то
-                            s.substring(0, s.length() - 2) : s) //отбрасываем его и последний (например &0), иначе целиком забираем серийник.
-                    .findFirst().orElse(decodedValue);
+            Matcher matcher = Pattern.compile(".*#(?<serial>\\w&?\\w*\\w+)(&\\d)?#").matcher(decodedValue);
+            String serial = "";
             entry.setValue(decodedValue);
+            if (matcher.find()) {
+                serial = matcher.group("serial");
+            }
 
             String key = entry.getKey();
             String deviceGuid = Arrays.stream(key.split(""))
@@ -59,7 +68,7 @@ public class RegistryAnalyzer implements Analyzer {
             //FIXME заменить код на метод копирования_ненулевых_свойств()
             USBDevice tmp = usbDeviceMap.get(serial);
             if (tmp == null) {
-                usbDeviceMap.put(serial, USBDevice.getBuilder().withSerial(serial).withGuid(deviceGuid).build());
+                usbDeviceMap.put(serial, new USBDevice().setSerial(serial).setGuid(deviceGuid));
             } else {
                 tmp.setGuid(deviceGuid);
                 usbDeviceMap.put(serial, tmp);
@@ -106,16 +115,18 @@ public class RegistryAnalyzer implements Analyzer {
         return counter;
     }
 
+    /**
+     * Выполняет анализ реестра на наличие записей о USB устройствах и данных о них.
+     *
+     * @param doNewAnalysis определяет необходимость выполнения нового анализа.
+     * @return если doNewAnalysis задан true, то возвращается результат нового анализа, если false - возвращает результат предыдущего
+     * анализа.
+     */
     @Override
     public Map<String, USBDevice> getAnalysis(boolean doNewAnalysis) {
         if (doNewAnalysis) {
-            try {
-                getUsbDevices();
-            } catch (InvocationTargetException | IllegalAccessException e) {
-                LOGGER.error("ОШИБКА. Не удалось получить список устройств из HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Enum\\USB. " +
-                        "Причина: {}", e.getLocalizedMessage());
-                LOGGER.debug("{}", e.toString());
-            }
+            getUsbDevices();
+            getReadyBoostDevices();
             associateSerialToGuid();
             determineDeviceUsers();
             getFriendlyName();
@@ -126,9 +137,8 @@ public class RegistryAnalyzer implements Analyzer {
 
     //TODO кроме FriendlyName метод еще и revision заполняет - имя не в полной мере соответствует.
     public Map<String, USBDevice> getFriendlyName() {
-        String regKeyUsbstor = "HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Enum\\USBSTOR";
         try {
-            List<String> deviceGroupList = WinRegReader.getSubkeys(regKeyUsbstor);
+            List<String> deviceGroupList = WinRegReader.getSubkeys(REG_KEY_USBSTOR);
             for (String deviceGroupKey : deviceGroupList) {
                 String revision = deviceGroupKey.substring(deviceGroupKey.lastIndexOf('_') + 1);
                 List<String> serialList = WinRegReader.getSubkeys(deviceGroupKey);
@@ -138,20 +148,25 @@ public class RegistryAnalyzer implements Analyzer {
                             serialKey.substring(lastIndexOfSlash, serialKey.length() - 2) : //Если да - отбрасываем его и префикс в виде пути
                             serialKey.substring(lastIndexOfSlash);                          //иначе просто отбрасываем префикс в виде пути.
                     String friendlyName = WinRegReader.getValue(serialKey, "FriendlyName").orElse("<не доступно>");
-                    USBDevice tmp = USBDevice.getBuilder()
-                            .withRevision(revision)
-                            .withFriendlyName(friendlyName).build();
+                    String diskId = WinRegReader.getValue(serialKey + "\\Device Parameters\\Partmgr", "DiskId").orElse("<не доступно>");
+
+                    USBDevice tmp = new USBDevice()
+                            .setRevision(revision)
+                            .setFriendlyName(friendlyName)
+                            .setDiskId(diskId);
 
                     usbDeviceMap.merge(serial, tmp, (usbDevice, src) -> {
                         usbDevice.setFriendlyName(src.getFriendlyName());
                         usbDevice.setRevision(src.getRevision());
+                        usbDevice.setDiskId(src.getDiskId());
                         return usbDevice;
                     });
                 }
             }
         } catch (IOException | InterruptedException e) {
             LOGGER.error("ОШИБКА. Не удалось получить поле Friendly name. Причина {}", e.getLocalizedMessage());
-            LOGGER.debug("{}", e.toString());
+            LOGGER.debug("Не удалось обработать {}", REG_KEY_USBSTOR, e);
+            Thread.currentThread().interrupt();
         }
         return usbDeviceMap;
     }
@@ -168,11 +183,12 @@ public class RegistryAnalyzer implements Analyzer {
             result = WinRegReader.getSubkeys(mountPoints2).stream()
                     .filter(e -> e.matches(".+\\{[a-fA-F0-9-]+}"))
                     .map(e -> e.substring(e.lastIndexOf("{")))
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException | InterruptedException e) {
             LOGGER.error("ОШИБКА. Не удалось получить GUID'ы устройств, используемых ТЕКУЩИМ пользователем. Причина: {}",
                     e.getLocalizedMessage());
-            LOGGER.debug("{}", e.toString());
+            LOGGER.debug("Не удалось обработать {}", mountPoints2, e);
+            Thread.currentThread().interrupt();
         }
         return result;
     }
@@ -202,16 +218,72 @@ public class RegistryAnalyzer implements Analyzer {
             guidList = WinRegReader.getSubkeys(nodeName + "\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\MountPoints2").stream()
                     .filter(e -> e.matches(".+\\{[a-fA-F0-9-]+}"))
                     .map(e -> e.substring(e.lastIndexOf("{")))
-                    .collect(Collectors.toList());
-
+                    .toList();
             WinRegReader.unloadHive(nodeName);
         } catch (IOException | InterruptedException e) {
             e.printStackTrace();
             LOGGER.error("ОШИБКА. Не удалось получить GUID'ы устройств, используемых пользователем {}. Причина: {}",
                     username, e.getLocalizedMessage());
             LOGGER.debug("{}", e.toString());
+            Thread.currentThread().interrupt();
         }
         return guidList;
+    }
+
+    /**
+     * Анализ ветки {@code HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows NT\CurrentVersion\EMDMgmt}. Ветка реестра ведется службой ReadyBoost.
+     * В нее записывается информация о всех подключаемых к системе устройствах, что служит неплохим источником данных для дальнейшего анализа.
+     * Анализ ветки выполняется на случай, если лог файлы или другие ветки были почищены - получим хоть какую-то информацию об устройствах.
+     *
+     * @return
+     */
+    public Map<String, USBDevice> getReadyBoostDevices() {
+        try {
+            List<String> keyList = WinRegReader.getSubkeys(REG_KEY_EMDMGMT);
+//            VOL [диск:]
+            for (String key : keyList) {
+                try {
+                    String pattern = ".*&Ven_(?<ven>\\p{Graph}*)&Prod_(?<prod>[\\p{Graph}&&[^&]]*)(&Rev_(?<rev>\\p{Graph}*))?#(?<serial>\\w&?\\w*)(&\\d)?.*}(?<volLabel>\\p{Print}*)_(?<volId>\\d*)";
+                    Matcher matcher = Pattern.compile(pattern).matcher(key);
+                    boolean matcherFindResult = matcher.find();
+                    if (matcherFindResult) {
+                        String ven = matcher.group("ven");
+                        String prod = matcher.group("prod");
+                        String rev = matcher.group("rev");
+                        String serial = matcher.group("serial");
+                        String volLabel = matcher.group("volLabel");
+                        long volumeId = Long.parseLong(matcher.group("volId"));
+                        USBDevice tmp = new USBDevice()
+                                .setRevision(rev)
+                                .setSerial(serial)
+                                .setProductNameByRegistry(prod)
+                                .setVendorNameByRegistry(ven)
+                                .addVolumeLabel(volLabel)
+                                .addVolumeId(volumeId);
+
+                        usbDeviceMap.merge(serial, tmp, (dst, src) -> {
+                            dst.addVolumeLabel(volLabel);
+                            dst.addVolumeId(volumeId);
+                            dst.setVendorNameByRegistry(src.getVendorNameByRegistry());
+                            dst.setProductNameByRegistry(src.getProductNameByRegistry());
+                            dst.setRevision(src.getRevision());
+                            return dst;
+                        });
+                    } else {
+                        LOGGER.warn("Запись пропущена - не соответствует паттерну:\n\t\tKey = {}", key);
+                    }
+                } catch (IllegalStateException | NoSuchElementException e) {
+                    LOGGER.warn("Запись об устройстве не удалось распознать.\n\tЗапись: {}\n\tПричина: {}", key, e.getLocalizedMessage());
+                    LOGGER.debug("Запись об устройстве не удалось распознать.\n\tЗапись: {}", key, e);
+                }
+            }
+
+        } catch (IOException | InterruptedException e) {
+            LOGGER.error("Анализ ветки {} прерван: {}", REG_KEY_EMDMGMT, e.getLocalizedMessage());
+            LOGGER.debug("Анализ ветки {} прерван", REG_KEY_EMDMGMT, e);
+            Thread.currentThread().interrupt();
+        }
+        return usbDeviceMap;
     }
 
     /**
@@ -225,13 +297,7 @@ public class RegistryAnalyzer implements Analyzer {
     @Deprecated(forRemoval = true)
     public Map<String, USBDevice> getRegistryAnalysis(boolean doNewAnalysis) {
         if (doNewAnalysis) {
-            try {
-                getUsbDevices();
-            } catch (InvocationTargetException | IllegalAccessException e) {
-                LOGGER.error("ОШИБКА. Не удалось получить список устройств из HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Enum\\USB. " +
-                        "Причина: {}", e.getLocalizedMessage());
-                LOGGER.debug("{}", e.toString());
-            }
+            getUsbDevices();
             associateSerialToGuid();
             determineDeviceUsers();
             getFriendlyName();
@@ -241,41 +307,12 @@ public class RegistryAnalyzer implements Analyzer {
     }
 
     /**
-     * Позволяет получить список USB устройств, когда-либо подключаемых к системе. Заполнение полей USBDevice происходит
-     * автоматически из полей реестра имеющих такие же наименования.
-     *
-     * @return Список USBDevice с полями заполненными из ветки реестра HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Enum\USB
-     * @deprecated использует рефлексию. Тесты на корректность работы не проходил.
-     */
-    @Deprecated(forRemoval = true)
-    public List<USBDevice> getUSBDevicesWithAutoFilling() {
-        List<USBDevice> usbDevices = new ArrayList<>();
-        try {
-            List<String> subkeys = WinRegReader.getSubkeys(REG_KEY_USB);
-            USBDevice.setUsbIds("usb.ids");
-
-            for (String pidvid : subkeys) {
-                List<String> serials = WinRegReader.getSubkeys(pidvid);
-                for (String serial : serials) {
-                    Map<String, String> valueList = WinRegReader.getAllValuesInKey(serial).orElseThrow();
-                    USBDevice.Builder currDevice = USBDevice.getBuilder();
-                    valueList.forEach(currDevice::setField);
-                    usbDevices.add(currDevice.build());
-                }
-            }
-        } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
-        }
-        return usbDevices;
-    }
-
-    /**
      * Получить список USB устройств когда-либо подключенных к АРМ.
      * Информация берется из HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Enum\USB
      *
      * @return список USB устройств, когда-либо подключенных и зарегистрированных в ОС.
      */
-    public Map<String, USBDevice> getUsbDevices() throws InvocationTargetException, IllegalAccessException {
+    public Map<String, USBDevice> getUsbDevices() {
         try {
             List<String> pidVidList = WinRegReader.getSubkeys(REG_KEY_USB);
 
@@ -287,10 +324,9 @@ public class RegistryAnalyzer implements Analyzer {
                     String[] tmpArr = serialKey.split("\\\\");
                     String serial = tmpArr[tmpArr.length - 1];
 
-                    USBDevice currUsbDev = USBDevice.getBuilder()
-                            .withSerial(serial)
-                            .withVidPid(vid, pid)
-                            .build();
+                    USBDevice currUsbDev = new USBDevice()
+                            .setSerial(serial)
+                            .setVidPid(vid, pid);
 
                     usbDeviceMap.merge(serial, currUsbDev, (dst, src) -> {
                         dst.setSerial(src.getSerial());
@@ -305,7 +341,8 @@ public class RegistryAnalyzer implements Analyzer {
         } catch (IOException | InterruptedException e) {
             LOGGER.error("ОШИБКА. Не удалось получить список устройств из HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Enum\\USB. " +
                     "Причина: {}", e.getLocalizedMessage());
-            LOGGER.debug("{}", e.toString());
+            LOGGER.debug("ОШИБКА. Не удалось получить список устройств из HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Enum\\USB. ", e);
+            Thread.currentThread().interrupt();
         }
         return usbDeviceMap;
     }
@@ -324,7 +361,7 @@ public class RegistryAnalyzer implements Analyzer {
     public List<UserProfile> getUserProfileList() {
         List<UserProfile> userProfileList = new ArrayList<>();
         try {
-            List<String> profileRegKeys = WinRegReader.getSubkeys(REG_PROFILE_LIST);
+            List<String> profileRegKeys = WinRegReader.getSubkeys(REG_KEY_PROFILE_LIST);
             userProfileList = profileRegKeys.stream()
                     .map(profile -> {
                         String profileImagePath = WinRegReader.getValue(profile, "ProfileImagePath").orElseThrow();
@@ -338,12 +375,24 @@ public class RegistryAnalyzer implements Analyzer {
                                 .withUsername(username)
                                 .build();
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException | InterruptedException e) {
             LOGGER.error("ОШИБКА. Не удалось получить список профилей в системе. Причина: {}", e.getLocalizedMessage());
-            LOGGER.debug("{}", e.toString());
+            LOGGER.debug("ОШИБКА. Не удалось получить список профилей в системе.", e);
+            Thread.currentThread().interrupt();
         }
         return userProfileList;
+    }
+
+    /**
+     * Проверить относится ли запись к разделу несъемного HDD/SDD
+     *
+     * @param hexValue - проверяемое значение - строка, содержащая HEX-символы
+     * @return true - если строка начинается с HEX-сигнатуры {@code 444D494F3A49443A}, false - во всех остальных случаях.
+     */
+    private boolean isHDDPartition(String hexValue) {
+        final String signature = "444D494F3A49443A"; //TODO есть подозрение, что это сигнатура свойственна только GPT-дискам.
+        return hexValue.startsWith(signature);
     }
 
     /**
@@ -351,7 +400,7 @@ public class RegistryAnalyzer implements Analyzer {
      * @return значение PID (ProductID)
      */
     private Optional<String> parsePid(String pidvid) {
-        Matcher matcher = Pattern.compile("pid_(.{4})").matcher(pidvid);
+        Matcher matcher = Pattern.compile("(?i)pid_(.{4})").matcher(pidvid);
         return matcher.find() ? Optional.of(matcher.group(1)) : Optional.empty();
     }
 
@@ -360,7 +409,7 @@ public class RegistryAnalyzer implements Analyzer {
      * @return значение VID (VendorID)
      */
     private Optional<String> parseVid(String pidvid) {
-        Matcher matcher = Pattern.compile("vid_(.{4})").matcher(pidvid);
+        Matcher matcher = Pattern.compile("(?i)vid_(.{4})").matcher(pidvid);
         return matcher.find() ? Optional.of(matcher.group(1)) : Optional.empty();
     }
 
@@ -375,24 +424,70 @@ public class RegistryAnalyzer implements Analyzer {
         try {
             List<String> deviceList = WinRegReader.getSubkeys(wpdKey);
             for (String deviceEntry : deviceList) {
-                Optional<String> serial = usbDeviceMap.keySet().stream()
-                        .filter(s -> deviceEntry.contains("#" + s)) //что бы уменьшить количество ложно-положительных совпадений
-                        //вводится неуникальный признак начала серийника - #.
-                        .findFirst();
+                Optional<String> serial = Optional.empty();
+                try {
+                    serial = usbDeviceMap.keySet().stream()
+                            .filter(s -> deviceEntry.matches("(?i).*#" + s + "[#&].*"))
+                            .findFirst();
+                } catch (PatternSyntaxException e) {
+                    //Т.к. regexp формируется за счет строковой переменной, которая может в себе содержать весь набор символов,
+                    // в том числе и символы, влияющие на обработку выражения, необходимо учесть высокую вероятность
+                    // построения некорректного regexp.
+                    serial = usbDeviceMap.keySet().stream()
+                            .filter(s -> deviceEntry.contains("#" + s))
+                            .findFirst();
+                    LOGGER.warn("[W] При определении метки тома {} использовался метод contains() вместо matches", serial.orElse("***"));
+                    LOGGER.debug("[D] При определении метки тома {} использовался метод contains() вместо matches", serial.orElse("***"), e);
+                }
                 if (serial.isPresent()) {
                     String volumeName = WinRegReader.getValue(deviceEntry, "FriendlyName").orElseThrow();
-                    USBDevice tmp = USBDevice.getBuilder()
-                            .withVolumeName(volumeName).build();
+                    USBDevice tmp = new USBDevice()
+                            .setSerial(serial.get())
+                            .addVolumeLabel(volumeName);
 
                     usbDeviceMap.merge(serial.get(), tmp, (dst, src) -> {
-                        dst.setVolumeName(src.getVolumeName());
+                        dst.addVolumeLabel(volumeName);
                         return dst;
                     });
+                } else {
+                    //FIXME код говно. переписать.
+                    List<String> stringList = Arrays.stream(deviceEntry.split("#")).toList();
+                    String newPid = "";
+                    String newVid = "";
+                    try {
+                        newVid = stringList.stream()
+                                .filter(elem -> elem.matches("(?i).*vid_.*"))
+                                .map(elem -> parseVid(elem).orElseThrow())
+                                .findFirst().orElseThrow();
+                        newPid = stringList.stream()
+                                .filter(elem -> elem.matches("(?i).*pid_.*"))
+                                .map(elem -> parsePid(elem).orElseThrow())
+                                .findFirst().orElseThrow();
+                    } catch (NoSuchElementException e) {
+                        LOGGER.warn("Не удалось определить VID/PID в записи {}", deviceEntry);
+                        LOGGER.debug("Не удалось определить VID/PID в записи {}", deviceEntry, e);
+                    }
+                    String newSerial = stringList.get(stringList.size() - 1);
+                    String volumeName = WinRegReader.getValue(deviceEntry, "FriendlyName").orElseThrow();
+                    USBDevice tmp = new USBDevice()
+                            .setVidPid(newVid, newPid)
+                            .setSerial(newSerial)
+                            .addVolumeLabel(volumeName);
+                    usbDeviceMap.merge(newSerial, tmp, (dst, src) -> {
+                        dst.setSerial(src.getSerial());
+                        dst.setPid(src.getPid());
+                        dst.setVid(src.getVid());
+                        dst.setProductName(src.getProductName());
+                        dst.setVendorName(src.getVendorName());
+                        return dst;
+                    });
+
                 }
             }
         } catch (IOException | InterruptedException e) {
             LOGGER.error("ОШИБКА. Не удалось получить метку для устройства. Причина: {}", e.getLocalizedMessage());
-            LOGGER.debug("{}", e.toString());
+            LOGGER.debug("ОШИБКА. Не удалось получить метку для устройства.", e);
+            Thread.currentThread().interrupt();
         }
 
         return usbDeviceMap;
