@@ -1,11 +1,9 @@
 package ru.pel.usbddc.service;
 
-import lombok.Getter;
-import lombok.Setter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.*;
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
@@ -37,14 +35,13 @@ public class WinRegReader {
         //<key>\subkey1 - первая строка, в моем случае вседга пустая.
         //<key>\subkey2
         //<key>\subkeyN
-        String output = execCommand("reg query \"" + key + "\"").getResult();
-//            String output = execCommand("cmd /c start /wait /I reg.lnk query \"" + key + "\"").getResult();
+        String output = WinComExecutor.exec("reg query \"" + key + "\"").getBody();
 
         return Arrays.stream(output.split(System.lineSeparator()))
                 .filter(s -> !s.isEmpty() &&            //отбрасываем пустые строки
                         s.matches("HKEY.+") &&    //строки с параметрами
                         !s.matches(Pattern.quote(key)))  //отбстроку с именем раздела, в котором ищем подразделы
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -55,8 +52,9 @@ public class WinRegReader {
      * Optional.empty()
      */
     public static Optional<Map<String, String>> getAllValuesInKey(String key) {
+        Optional<Map<String, String>> valuesOptional = Optional.empty();
         try {
-            String output = execCommand("reg query \"" + key + "\"").getResult();
+            String output = WinComExecutor.exec("reg query \"" + key + "\"").getBody();
 
 //            String cyr = new String(output.getBytes("cp866"), "windows-1251");
 
@@ -75,12 +73,13 @@ public class WinRegReader {
 //                    .collect(Collectors.toMap(l->l[1],l->l[l.length-1])); //и собираем в мапу, где l[1] - имя параметра, l[l.length-1] - значение
                     .collect(Collectors.toMap(l -> l[1],
                             l -> l.length >= 3 ? l[l.length - 1] : ""));
-            return Optional.of(values);
+            valuesOptional = Optional.of(values);
         } catch (IOException | InterruptedException e) {
             LOGGER.error("ОШИБКА. Не удалось получить список параметров реестра в разделе {}. Причина: {}", key, e.getLocalizedMessage());
             LOGGER.debug("{}", e.toString());
-            return Optional.empty();
+            Thread.currentThread().interrupt();
         }
+        return valuesOptional;
     }
 
     /**
@@ -91,8 +90,9 @@ public class WinRegReader {
      * @return {@code Optional<String>}, содержащий значение параметра
      */
     public static Optional<String> getValue(String key, String value) {
+        Optional<String> valueOptional = Optional.empty();
         try {
-            String output = execCommand("reg query " + '"' + key + "\" /v \"" + value + "\"").getResult();
+            String output = WinComExecutor.exec("reg query " + '"' + key + "\" /v \"" + value + "\"").getBody();
 
             // Вывод имеет следующий формат:
             // \n<Version information>\n\n<value>\t<registry type>\t<value>
@@ -105,13 +105,14 @@ public class WinRegReader {
 
             String[] parsed = output.split("\\s{4}"); //в оригинале регулярка была "\t", что давало неверный результат,
             // т.к. в output деление идет четырьмя символами пробела
-            return Optional.of(parsed[parsed.length - 1]);
+//            return Optional.of(parsed[parsed.length - 1]);
+            valueOptional = Optional.of(parsed[parsed.length - 1]);
         } catch (IOException | InterruptedException e) {
             LOGGER.error("ОШИБКА. Не удалось получить значение параметра {} в разделе {}. Причина: {}", value, key, e.getLocalizedMessage());
             LOGGER.debug("{}", e.toString());
             return Optional.empty();
         }
-
+        return valueOptional;
     }
 
     /**
@@ -122,13 +123,8 @@ public class WinRegReader {
      * @param hive     Имя файла куста, подлежащего загрузке.
      * @return {@code WinRegReader.ExecResult}, в котором первое значение код выхода (0 - успешно, 1 - провал), второе - пустая строка.
      */
-    public static ExecResult<Integer, String> loadHive(String nodeName, String hive) throws IOException, InterruptedException {
-//        String command = "cmd /c start /b /wait /I reg.lnk load " + nodeName + " " + hive;
-        String command = "reg load " + nodeName + " \"" + hive + "\"";
-//        String command = "reg load " + nodeName + " " + hive;
-        ExecResult<Integer, String> execResult = new ExecResult<>();
-        execResult = execCommand(command);
-        return execResult;
+    public static WinComExecutor.Result<Integer, String> loadHive(String nodeName, String hive) throws IOException, InterruptedException {
+        return WinComExecutor.exec("reg load " + nodeName + " \"" + hive + "\"");
     }
 
     /**
@@ -138,12 +134,9 @@ public class WinRegReader {
      * @param nodeName выгружаемый куст реестра
      * @return {@code WinRegReader.ExecResult}, в котором первое значение код выхода (0 - успешно, 1 - провал), второе - пустая строка.
      */
-    public static ExecResult<Integer, String> unloadHive(String nodeName) throws IOException, InterruptedException {
-        ExecResult<Integer, String> execResult = new ExecResult<>();
+    public static WinComExecutor.Result<Integer, String> unloadHive(String nodeName) throws IOException, InterruptedException {
         //TODO делать выгрузку после проверки существования раздела - нужен отдельный метод проверки.
-//        execResult = execCommand("cmd /c start /b /wait /I reg.lnk unload " + nodeName);
-        execResult = execCommand("reg unload " + nodeName);
-        return execResult;
+        return WinComExecutor.exec("reg unload " + nodeName);
     }
 
     /**
@@ -156,13 +149,13 @@ public class WinRegReader {
      * @throws InterruptedException
      */
     public static boolean isKeyExists(String key) throws IOException, InterruptedException {
-        ExecResult<Integer, String> result = execCommand("reg query \"" + key + "\" /ve ");
-        boolean b = result.exitCode == 0;
-        boolean s = !result.getResult().isEmpty();
+        WinComExecutor.Result<Integer, String> result = WinComExecutor.exec("reg query \"" + key + "\" /ve ");
+        boolean b = result.getExitCode() == 0;
+        boolean s = !result.getBody().isEmpty();
         return b && s;
     }
-
-    /**
+    /*
+     *//**
      * Выполняет указанную команду в отдельном процессе, ждет окончания ее работы и возвращает результат.
      *
      * @param command команда для выполнения
@@ -170,7 +163,7 @@ public class WinRegReader {
      * виде строки.
      * @throws IOException
      * @throws InterruptedException
-     */
+     *//*
     private static ExecResult<Integer, String> execCommand(String command) throws IOException, InterruptedException {
         Process process = Runtime.getRuntime().exec(command);
 
@@ -178,8 +171,8 @@ public class WinRegReader {
         reader.start();
         int exitCode = process.waitFor();
         reader.join();
-        String result = reader.getResult();
-        return new ExecResult<>(exitCode, result);
+        String body = reader.getBody();
+        return new ExecResult<>(exitCode, body);
     }
 
     private static class StreamReader extends Thread {
@@ -196,7 +189,7 @@ public class WinRegReader {
             }
         }
 
-        public String getResult() {
+        public String getBody() {
             return sw.toString();
         }
 
@@ -219,14 +212,14 @@ public class WinRegReader {
     @Setter
     public static class ExecResult<C, R> {
         private C exitCode;
-        private R result;
+        private R body;
 
-        public ExecResult(C exitCode, R result) {
+        public ExecResult(C exitCode, R body) {
             this.exitCode = exitCode;
-            this.result = result;
+            this.body = body;
         }
 
         public ExecResult() {
         }
-    }
+    }*/
 }
